--- a/dsgrid_project/datasets/sector_models/comstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dataset.toml
@@ -46,8 +46,8 @@ version = ""
 
 [[dimensions]]
 type = "model_year"
-dimension_id = "2012_model_year__cd4ea2cf-aa79-4260-b143-3b68b59d6667"
-version = "1.0.0"
+dimension_id = ""
+version = ""
 
 [[dimensions]]
 type = "time"
