--- a/dsgrid_project/datasets/sector_models/tempo/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dataset.toml
@@ -67,7 +67,7 @@ notes = "provisional sample data"
 origin_creator = "Brian Bush"
 origin_contributors = ["Brian Bush", "Arthur Yip"]
 origin_organization = "NREL"
-origin_date =  "2021-04-
+origin_date =  "2021-04-26"
 origin_project = "TEMPO"
 tags = ["TEMPO"]
 data_class = "low"
