--- a/dsgrid_project/dimensions.toml
+++ b/dsgrid_project/dimensions.toml
@@ -2,16 +2,24 @@
 # Base Dimensions
 # ------------------------------------------------------
 [[dimensions]]
+description = """
+US counties, Census 2020 vintage, no territories
+"""
+file = "dimensions/counties.csv"
+name = "US County - Census 2020"
+type = "geography"
+
+[[dimensions]]
 class = "Sector"
 description = """
 dsgrid Standard Scenarios 2021 Sectors; Transportation only
 """
 file = "dimensions/sectors.csv"
 module = "dsgrid.dimension.standard"
-name = "Standard-Scenarios-2021-Sectors--Trans-Only"
+name = "Standard Scenarios 2021 Sectors - Trans-Only"
 type = "sector"
 
-# TODO
+# TODO -- add the tempo dimensions for subsector for now
 # [[dimensions]]
 # type = "subsector"
 # name = "Standard-Scenarios-2021-Detailed-Subsectors--Trans-Only"
@@ -22,7 +30,7 @@ type = "sector"
 # dsgrid Standard Scenarios 2021 Subsectors; Transportation sector only
 # """
 
-# TODO
+# TODO -- add the tempo dimensions for enduses for now
 # [[dimensions]]
 # type = "end_use"
 # name = "Standard-Scenarios-2021-Detailed-End-Uses--Trans-Only"
@@ -40,7 +48,7 @@ Weather year, 2012 only
 """
 file = "dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
-name = "2012-Weather-Year"
+name = "2012 Weather Year"
 type = "weather"
 
 [[dimensions]]
@@ -50,7 +58,7 @@ Model year, 2010-2050, every other year
 """
 file = "dimensions/model_years.csv"
 module = "dsgrid.dimension.standard"
-name = "Model-Years-2010-to-2050-with-2yr-intervals"
+name = "Model Years 2010 to 2050 with 2 year intervals"
 type = "model_year"
 
 [[dimensions]]
@@ -60,7 +68,7 @@ base scenario only
 """
 file = "dimensions/scenarios.csv"
 module = "dsgrid.dimension.standard"
-name = "Baseline-Scenario"
+name = "Baseline Scenario"
 type = "scenario"
 
 [[dimensions]]
@@ -70,7 +78,7 @@ dsgrid Standard Scenarios 2021 Data Sources; TEMPO Only
 """
 file = "dimensions/sources.csv"
 module = "dsgrid.dimension.standard"
-name = "Standard-Scenarios-2021-DataSourcs--TEMPO-Only"
+name = "Standard Scenarios 2021 DataSourcs - TEMPO-Only"
 type = "data_source"
 
 [[dimensions]]
@@ -89,3 +97,31 @@ str_format = "%Y-%m-%d %H:%M:%S"
 timezone = "UTC"
 value_representation = "mean"
 
+# # ------------------------------------------------------
+# # Supplemental Dimensions
+# # ------------------------------------------------------
+# [[dimensions]]
+# description = """
+# US States
+# """
+# file = "dimensions/supplemental/states.csv"
+# name = "US-State"
+# type = "geography"
+
+# [[dimensions]]
+# class = "CensusDivision"
+# description = """
+# US Census Divisions
+# """
+# file = "dimensions/supplemental/census_divisions.csv"
+# name = "US-Census-Division"
+# type = "geography"
+
+# [[dimensions]]
+# class = "CensusRegion"
+# description = """
+# US Census Regions
+# """
+# file = "dimensions/supplemental/census_regions.csv"
+# name = "US-Census-Region"
+# type = "geography"
