--- a/dsgrid_project/dimensions.toml
+++ b/dsgrid_project/dimensions.toml
@@ -8,15 +8,16 @@ US counties, Census 2020 vintage, no territories
 file = "dimensions/counties.csv"
 name = "US County - Census 2020"
 type = "geography"
+class = "County"
 
 [[dimensions]]
 class = "Sector"
 description = """
-dsgrid Standard Scenarios 2021 Sectors; Transportation only
+dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Transportation  Only
 """
 file = "dimensions/sectors.csv"
 module = "dsgrid.dimension.standard"
-name = "Standard Scenarios 2021 Sectors - Trans-Only"
+name = "Standard Scenarios 2021 Sectors - Com-Res-Tra-Only"
 type = "sector"
 
 # TODO -- add the tempo dimensions for subsector for now
@@ -42,14 +43,14 @@ type = "sector"
 # """
 
 [[dimensions]]
-class = "Weather"
+class = "WeatherYear"
 description = """
 Weather year, 2012 only
 """
 file = "dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
-type = "weather"
+type = "weather_year"
 
 [[dimensions]]
 class = "ModelYear"
@@ -82,6 +83,7 @@ name = "Standard Scenarios 2021 DataSourcs - TEMPO-Only"
 type = "data_source"
 
 [[dimensions]]
+class = "Time"
 end = "2012-12-31 23:59:59"
 frequency = "1 hour"
 includes_dst = false
