--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -1,4 +1,4 @@
-# TODO: This configuration is under active development. Currently it is set up for TEMPO data only but it will later be expanded to include all project configuration details.
+# TODO: This configuration is under active development. Currently it is set up for TEMPO, ComStock, ResStock data only but it will later be expanded to include all project configuration details.
 
 description = """dsgrid Standard Scenarios project FY21"""
 name = "dsgrid Standard Scenarios 2021"
@@ -11,22 +11,22 @@ project_id = "dsgrid_standard_scenarios_2021"
 benchmark = [] # ignoring this for now
 historical = [] # ignoring this for now
 
-# [[input_datasets.datasets]]
-# dataset_id = "comstock-standard-scenarios-2021"
-# version = "1.0.0"
-# dataset_type = "sector_model"
-# model_sector = "cld"
-
-# [[input_datasets.datasets]]
-# dataset_id = "resstock-standard-scenarios-2021"
-# version = "1.0.0"
-# dataset_type = "sector_model"
-# model_sector = "rld"
-
 [[input_datasets.datasets]]
 dataset_id = "tempo-standard-scenarios-2021"
 dataset_type = "sector_model"
-model_sector = "tld"
+model_sector = "tempo"
+version = "1.0.0"
+
+[[input_datasets.datasets]]
+dataset_id = "resstock-standard-scenarios-2021"
+dataset_type = "sector_model"
+model_sector = "resstock"
+version = "1.0.0"
+
+[[input_datasets.datasets]]
+dataset_id = "comstock-standard-scenarios-2021"
+dataset_type = "sector_model"
+model_sector = "comstock"
 version = "1.0.0"
 
 [dimensions]
@@ -34,53 +34,47 @@ version = "1.0.0"
 # Base Dimensions
 # ------------------------------------------------------
 [[dimensions.base_dimensions]] # TODO
-dimension_id = "todo__XX"
+dimension_id = "us_county_-_census_2020__77d98fae-006b-4d0a-8a1d-b897fd213ed5"
 type = "geography"
 version = "1.0.0"
 
-[[dimensions.base_dimensions]] # TODO
-dimension_id = ""
+[[dimensions.base_dimensions]]
+dimension_id = "standard_scenarios_2021_sectors_-_com-res-tra-"
 type = "sector"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]] # TODO
-# required: subsector maps to sector
 dimension_id = ""
 type = "subsector"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]] # TODO
-# required: end use maps to [sector, subsector, data_source]
 dimension_id = ""
 type = "end_use"
 version = "1.0.0"
 
-[[dimensions.base_dimensions]] # TODO
-# required: weather maps to [modelyear, scenario]
-dimension_id = ""
+[[dimensions.base_dimensions]]
+dimension_id = "2012_weather_year__0019ebb9-507b-41c9-b5a4-383b97304a69"
 type = "weather_year"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-# required: data_source year maps to [scenario, weather, sector, data_source]
-dimension_id = ""
+dimension_id = "model_years_2010_to_2050_with_2_year_intervals__17fa2f67-ef7f-49c8-8388-f2b102367f76"
 type = "model_year"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-# required: scenario maps to [data_source, weather]
-dimension_id = ""
+dimension_id = "reference_scenario__4b6defca-9212-4388-bc39-9cf4462b4527"
 type = "scenario"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]] # TODO
-# data_source maps to [model_year, sector, subsector, enduse, scenario]
-dimension_id = ""
+dimension_id = "standard_scenarios_2021_datasourcs_-_tempo-only__7def04f1-6e90-4159-8303-8faa06b811fb"
 type = "data_source"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]] # TODO
-dimension_id = ""
+dimension_id = "time-2012-utc-houlry-periodbeginning-nodst-noleapdayadjustment-mean__72c76c0f-0d5a-4c03-8cf2-d806c4130cd9"
 type = "time"
 version = "1.0.0"
 
@@ -100,4 +94,34 @@ version = "1.0.0"
 [[dimensions.supplemental_dimensions]]
 dimension_id = "us_census_divisions__6e2dcd43-5f14-45b1-b850-f289673d89c7"
 type = "geography"
+version = "1.0.0"
+
+# ------------------------------------------------------
+# Dimension Mappings
+# ------------------------------------------------------
+[[dimension_mappings.base_to_base]] # TODO
+from_dimension_type = "sector"
+mapping_id = ""
+required_for_validation = true
+to_dimension_type = "subsector"
+version = "1.0.0"
+
+# TODO: may need sector, subsector, end use mappings
+
+[[dimension_mappings.base_to_supplemental]]
+from_dimension_type = "geography"
+mapping_id = "us_counties_-_census_2010__us_census_regions__aa5b14a9-53c0-42a4-aa7d-eb7c9a279324"
+to_dimension_type = "geography"
+version = "1.0.0"
+
+[[dimension_mappings.base_to_supplemental]]
+from_dimension_type = "geography"
+mapping_id = "us_counties_-_census_2010__us_census_divisions__1126102b-6c0b-4779-99a8-e9e25af21e71"
+to_dimension_type = "geography"
+version = "1.0.0"
+
+[[dimension_mappings.base_to_supplemental]]
+from_dimension_type = "geography"
+mapping_id = "us_counties_-_census_2010__us_states__4740e88a-413f-4bf1-a993-25a6b0a4cba3"
+to_dimension_type = "geography"
 version = "1.0.0"
